AUGREL/src/objects/tempinteraction__c.object
<CustomObject>
    <fields>
        <fullName>ANI__c</fullName>
        <label>ANI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONN_ID__c</fullName>
        <label>CONN ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Temp Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Temp Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>